gitops/applications/base/nexus/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nexus-ui
  namespace: ${ARGOCD_ENV_nexus_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_nexus_ui_istio_gateway_namespace}/${ARGOCD_ENV_nexus_ui_istio_wildcard_gateway_name}
  hosts:
    - "nexus.${ARGOCD_ENV_nexus_ui_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nexus
            port:
              number: 8081         
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nexus-helm-oci
  namespace: ${ARGOCD_ENV_nexus_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_nexus_ui_istio_gateway_namespace}/${ARGOCD_ENV_nexus_ui_istio_wildcard_gateway_name}
  hosts:
    - "nexusoci.${ARGOCD_ENV_nexus_ui_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nexus
            port:
              number: 8083  # OCI Helm group port
